# devops

./: .gitignore  Dockerfile  Makefile  Makefile.am  Makefile.in  UnitTest.cpp  config.status  configure  configure.ac  deb.deb  description  description.txt  my_program  scriptA.sh  scriptB.sh
.deps/: Aztec.Po  HTTP_Server.Po  TrigonometryClass.Po  UnnitTest.Po  factorial.Po  main.Po
.github/workflows/: build.yml
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
deb/DEBIAN/: control
debian/: changelog  control
lab2/: lab2.sln  scriptC.sh
lab2/lab2/: Aztec.cpp  Aztec.h  HTTP_Server  HTTP_Server.cpp  HTTP_Server.h  TrigonometryClass.cpp  TrigonometryClass.h  UnitTest  UnitTest.cpp  UnnitTest.cpp  constants.h  factorial.cpp  factorial.h  lab2.vcxproj  lab2.vcxproj.filters  main.cpp
